--- a/Game.html
+++ b/Game.html
@@ -53,19 +53,20 @@
         }
         updateBannerVisibility();
       }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/vet 166.loader.js";
+   var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/Game.asm.loader.js";
       var config = {
-        dataUrl: buildUrl + "/vet 166.data",
-        frameworkUrl: buildUrl + "/vet 166.framework.js",
-        codeUrl: buildUrl + "/vet 166.wasm",
+        dataUrl: buildUrl + "/Game.data",
+        frameworkUrl: buildUrl + "/Game.asm.framework.js",
+        codeUrl: buildUrl + "/Game.asm.js",
+        memoryUrl: buildUrl + "/Game.asm.mem",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Soolo studio",
-        productName: "Runner boy",
-        productVersion: "1.6",
+        companyName: "Soolo Studiio",
+        productName: "Running Guy",
+        productVersion: "1.3",
         showBanner: unityShowBanner,
       };
+
 
       // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
