--- a/Game.html
+++ b/Game.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title> Runner boy </title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+
+           <link rel="shortcut icon" href="images/boy_png_image.png">
+
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
